# minecraft-msa-auth

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
examples/: auth_code_flow.rs  device_flow.rs
src/: lib.rs  microsoft.rs  minecraft.rs
src/microsoft/: auth_code_flow.rs  device_flow.rs
