[package]
name = "minecraft-msa-auth"
version = "0.3.0"
edition = "2021"
authors = ["Celeste Peláez <celeste@eufonia.studio>"]
description = "A library for authenticating with Microsoft accounts to access Minecraft services."
repository = "https://github.com/KernelFreeze/minecraft-msa-auth"
categories = ["authentication"]
rust-version = "1.67.1"
license = "MIT OR Apache-2.0"

[dependencies]
getset = "0.1.2"
nutype = { version = "0.3.1", features = ["serde"] }
reqwest = { version = "0.11.14", default-features = false, features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"

[dev-dependencies]
oauth2 = { version = "4.3.0", default-features = false, features = ["reqwest", "rustls-tls"] }
reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1.25.0", features = ["full"] }
