[package]
name = "minecraft-msa-auth"
version = "0.4.0"
edition = "2021"
authors = ["Celeste Peláez <celeste@eufonia.studio>"]
description = "A library for authenticating with Microsoft accounts to access online Minecraft services."
repository = "https://github.com/minecraft-rs/minecraft-msa-auth"
categories = ["authentication"]
rust-version = "1.67.1"
license = "MIT OR Apache-2.0"

[dependencies]
getset = "0.1.2"
nutype = { version = "0.5.0", features = ["serde"] }
reqwest = { version = "0.12.0", default-features = false, features = ["json"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.50"

[dev-dependencies]
oauth2 = { version = "4.4.2", default-features = false, features = [
    "reqwest",
    "rustls-tls",
] }
reqwest = { version = "0.12.0", default-features = false, features = [
    "rustls-tls",
    "json",
] }
tokio = { version = "1.33.0", features = ["full"] }
